syntax="proto3";

package messages;

message BlocksHash {
    repeated bytes hashes = 1;
}