syntax="proto3";

package messages;

message GetBlock {
    bytes hash = 1;
}