syntax="proto3";

package messages;

message GetBlockAck {
    bytes block = 1;
}