syntax="proto3";

package messages;

message NewTransaction {
    bytes transaction = 1;
}