syntax="proto3";

package messages;

message RequestHeight {
    uint64 height = 1;
    uint32 version = 2;
}